# AutoContinue

./: Cargo.toml  Claude.md  README.md  install-by-agent.md
.github/workflows/: ci.yml  release.yml
docs/development/: 2026-03-14-detector-refactor-design.md
docs/plans/: 2026-03-26-opencode-detector-design.md
src/: args.rs  config.rs  main.rs  monitor.rs  runner.rs  terminal.rs
src/detector/: claude.rs  codex.rs  generic.rs  mod.rs  opencode.rs
