[package]
# AutoContinue (AC) - 自动继续/重试CLI工具的包装器
name = "autocontinue"
version = "0.1.0"
edition = "2024"
authors = ["MoYeRanQianZhi <MoYeRanQianZhi@gmail.com>"]
description = "A CLI wrapper that automatically continues or retries CLI tools like Claude, Codex, Gemini, etc."
license = "MIT"

# 生成的二进制文件名为 "ac"
[[bin]]
name = "ac"
path = "src/main.rs"

[dependencies]
# 命令行参数解析库
clap = { version = "4", features = ["derive"] }

# 跨平台伪终端支持 - 用于保持CLI的交互性
portable-pty = "0.8"

# Ctrl+C信号处理
ctrlc = "3"

# 跨平台终端操作
crossterm = "0.28"

# 错误处理
anyhow = "1"
thiserror = "1"

[profile.release]
# 优化发布版本
opt-level = 3
lto = true

[dev-dependencies]
# 测试用临时文件库
tempfile = "3"
